# python-isabelle-parser

./: .gitignore  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  metrics.yml
isabelle_parser/: __init__.py  cli.py  error.py  parser.out  parsetab.py  thy_grammar.lark  thy_lexer.py  thy_parser.py
metrics/: fetch_corpus.sh  measure.py  metrics.json  update_readme.py
tests/: test_parser.py  test_thy_grammer.py  test_thy_lexer.py  test_thy_parser.py
