[build-system]
requires = [
  "setuptools>=42", 
  "wheel", 
  "setuptools_scm[toml]>=6.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "isabelle_parser"
version = "0.0.1"
description = "A parser of Isabelle/Isar artifacts implemented in Python."
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE" }

authors = [
    { name = "Christian Kissig" }
]

dependencies = [
    "lark>=1.2.2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/christiankissig/python-isabelle-parser" }

[tool.setuptools]
packages = ['isabelle_parser']

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = [
    "tests"
]

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist"
